--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  height: 100vh;
+  background: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fireBtn {
+  background: #F00;
+  border: none;
+  color: white;
+  text-transform: uppercase;
+  width: 400px;
+  height: 400px;
+  font-size: 20vh;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  transition: transform .5s;
+  box-shadow: 0 0 100px 0 darkgray;
+  position: relative;
+}
+
+.fireBtn.hover {
+  transform: scale3d(1.1, 1.1, 1.1);
+}
+
+.fireBtn.depressed {
+  transition: transform .1s;
+  transform: scale3d(.8, .8, .8);
+}
+
+.filter {
+  background: radial-gradient(transparent, #222);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+@media only screen and (max-width: 415px) {
+  .fireBtn {
+    width: 80vw;
+    height: 80vw;
+    font-size: 10vh;
+  }
+}
