--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,8 @@ code {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  top: 0;
+  left: 0;
 }
 
 @media only screen and (max-width: 415px) {
